Versioning: Pressing "Save" pushes the current version onto the history stack, and makes whatever is in the editor be the new current version. Also adds a "History" button to the blogControls template, through which a user can revert to / delete prior versions. Note that this contains a visual bug where the content field, when blurred, has its innerText duplicated. Moving History button position to the left

--- a/src/client/blog.less
+++ b/src/client/blog.less
@@ -86,3 +86,69 @@ section.blog-controls {
   background-color: rgba(200,100,100,1);
 }
 
+/* Autosave styling */
+
+#mdblog-history {
+  background-color: rgba(230, 230, 120, 1);
+}
+
+.mdblog-history-table {
+  border:           2px solid black;
+}
+
+.mdblog-history-table-header {
+  background:       #444;
+  color:            #aaa;
+}
+
+.mdblog-history-table-row:nth-child(even) {
+  background:       #eee;
+}
+
+.mdblog-history-table-row:nth-child(odd) {
+  background:       #ddd;
+}
+
+.mdblog-version-date {
+  font-size:        12px;
+  width:            15%;
+}
+
+.mdblog-version-author {
+  font-size:        12px;
+  font-style:       italic;
+  width:            10%;
+}
+
+.mdblog-version-title {
+  font-size:        12px;
+  font-weight:      bold;
+  width:            20%;
+}
+
+.mdblog-version-summary {
+  font-size:        11px;
+  width:            30%;
+}
+
+.mdblog-version-restore {
+  width:            10%;
+}
+
+.mdblog-version-delete {
+  width:            10%;
+}
+
+.mdblog-history-table-row-current {
+  background:       rgba(225, 225, 150, 0.5);
+}
+
+.mdblog-current-version {
+  background:       rgba(225, 225, 150, 1);
+  font-style:       italic;
+}
+
+.mdblog-history-modal-overlay{
+  background-color: rgba(0, 0, 0, 1.0);
+  opacity:          0.95;
+}
